Bug 159805 - Printing line style dotted lines (horizontal) turns into dashes.
Summary: Printing line style dotted lines (horizontal) turns into dashes.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Print
  Show dependency treegraph
 
Reported: 2024-02-20 20:26 UTC by Mubeen
Modified: 2024-03-27 08:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
This is the source file to test. (11.72 KB, application/vnd.oasis.opendocument.text)
2024-02-20 20:30 UTC, Mubeen
Details
Export of file to PDF format - Correctly rendered output (12.17 KB, application/pdf)
2024-02-20 20:31 UTC, Mubeen
Details
Incorrect printed output (11.14 KB, application/pdf)
2024-02-20 20:32 UTC, Mubeen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mubeen 2024-02-20 20:26:09 UTC
Description:
Prior to LibreOffice 24.2.0.3, printing these types of line styles dotted lines worked correctly. Now, vertical lines are dotted and horizontal lines are dashed (widely spaced part dashed lines.) 

So instead of .............  you get _ _ _ _ _ _ _ .

Oddly, the vertical dotted lines are correct, but the horizontal ones are now dashes instead of dots. 


Steps to Reproduce:
1.Create a table
2.Table properties
3.Borders
4. Lines style (2nd one in the list) for dotted lines
5. File > Print

Output is different than what's on the screen. 
Print Preview accurately shows the incorrect output of dashes for horizontal and dotted for vertical. 

Actual Results:
Horizontal lines are dashes
Vertical lines are dotted. 

Expected Results:
Both horizontal and vertical uses the same line styles:
 Horizontal line are dotted (not dashes)
 Vertical lines should be dotted lines. 


Reproducible: Always


User Profile Reset: No

Additional Info:
This wasn't an issue in 7.5 (version immediately proceeding 24.2.0.3)

We have this for customer's printing invoices. 
The only possible work around, which is not visually equivalent, is to use solid lines instead of dots and print them in grey.
Comment 1 Mubeen 2024-02-20 20:30:27 UTC
Created attachment 192668 [details]
This is the source file to test.

If the file is EXPORTED as PDF, the output is correct. If the file is printed to PDF or any physical printer, the output is incorrect.
Comment 2 Mubeen 2024-02-20 20:31:25 UTC
Created attachment 192669 [details]
Export of file to PDF format - Correctly rendered output
Comment 3 Mubeen 2024-02-20 20:32:37 UTC
Created attachment 192670 [details]
Incorrect printed output

This output was printed using Microsoft PDF Printer. 
It was also tried against Corel PDF Printer too.
Additionally, the output was physically printed on an HP printer. 
All produce the same visual error.
Comment 4 Tex2002ans 2024-02-21 00:11:42 UTC
Strange.

I confirm in:

Version: 24.2.0.3 (X86_64) / LibreOffice Community
Build ID: da48488a73ddd66ea24cf16bbc4f7b9c08e9bea1
CPU threads: 8; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

using attachment 192668 [details].

- - -

These 2 menus are OK:

- File > Export As > Export as PDF
- File > Print Preview

but this is NOT OK:

- File > Print
- Printing to a physical printer too, just like comment 0 said.

- - -

> Oddly, the vertical dotted lines are correct, but the horizontal ones are now dashes instead of dots.

Yep. Same symptoms:

The horizontal lines looked like tiny dashes, so they visually stood out compared to the vertical dots.

You could clearly tell something was off on the printed paper, because the lines had different levels of "darkness".
Comment 5 Tex2002ans 2024-03-19 02:30:57 UTC
I think I was able to bibisect this.

- - - - - - -

In "linux-64-24.2", I got:
 531b942e374d118879a944a40fd313444f10f8f2 is the first bad commit
commit 531b942e374d118879a944a40fd313444f10f8f2
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Sep 13 15:50:25 2023 +0200

    source 9f4ccc63346b26d8d774b22124da0842ef18e0bc
    
    source 9f4ccc63346b26d8d774b22124da0842ef18e0bc

 instdir/program/libbasegfxlo.so      | Bin 1019152 -> 1019152 bytes
 instdir/program/libdrawinglayerlo.so | Bin 2066240 -> 2066240 bytes
 instdir/program/libsdlo.so           | Bin 10567264 -> 10567264 bytes
 instdir/program/libsvgiolo.so        | Bin 510792 -> 510792 bytes
 instdir/program/libsvxcorelo.so      | Bin 12259144 -> 12259144 bytes
 instdir/program/setuprc              |   2 +-
 instdir/program/versionrc            |   2 +-
 7 files changed, 2 insertions(+), 2 deletions(-)

- - - - - - -

In "win64-24.2", I got:
 98c5a129c2f090588b458547b08fa282afea320d is the first bad commit
commit 98c5a129c2f090588b458547b08fa282afea320d
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Mon Sep 18 09:20:50 2023 -0700

    source 9f4ccc63346b26d8d774b22124da0842ef18e0bc

    source 9f4ccc63346b26d8d774b22124da0842ef18e0bc

 instdir/program/OGLTranslo.dll         | Bin 311296 -> 311296 bytes
 instdir/program/basctllo.dll           | Bin 1406464 -> 1406464 bytes
 instdir/program/basegfxlo.dll          | Bin 730624 -> 731136 bytes
 instdir/program/canvastoolslo.dll      | Bin 225792 -> 225792 bytes
 instdir/program/chartcontrollerlo.dll  | Bin 2744832 -> 2744832 bytes
 instdir/program/chartcorelo.dll        | Bin 3167744 -> 3167744 bytes
 instdir/program/cppcanvaslo.dll        | Bin 287744 -> 287744 bytes
 instdir/program/cuilo.dll              | Bin 4594688 -> 4594688 bytes
 instdir/program/directx9canvaslo.dll   | Bin 472576 -> 472576 bytes
 instdir/program/docmodello.dll         | Bin 221696 -> 221696 bytes
 instdir/program/drawinglayercorelo.dll | Bin 125952 -> 125952 bytes
 instdir/program/drawinglayerlo.dll     | Bin 1461248 -> 1461248 bytes
 instdir/program/editenglo.dll          | Bin 2460160 -> 2460160 bytes
 instdir/program/emfiolo.dll            | Bin 241152 -> 241152 bytes
 instdir/program/gdipluscanvaslo.dll    | Bin 357888 -> 357888 bytes
 instdir/program/gengal.exe             | Bin 68096 -> 68096 bytes
 instdir/program/graphicfilterlo.dll    | Bin 54272 -> 54272 bytes
 instdir/program/msfilterlo.dll         | Bin 1035776 -> 1035776 bytes
 instdir/program/mswordlo.dll           | Bin 2636800 -> 2636800 bytes
 instdir/program/mtfrendererlo.dll      | Bin 44032 -> 44032 bytes
 instdir/program/oglcanvaslo.dll        | Bin 275456 -> 275456 bytes
 instdir/program/ooxlo.dll              | Bin 4571136 -> 4571136 bytes
 instdir/program/pdffilterlo.dll        | Bin 339456 -> 339456 bytes
 instdir/program/pdfimportlo.dll        | Bin 551936 -> 551936 bytes
 instdir/program/rptuilo.dll            | Bin 1315328 -> 1315328 bytes
 instdir/program/scfiltlo.dll           | Bin 4866048 -> 4866048 bytes
 instdir/program/sclo.dll               | Bin 17200128 -> 17200128 bytes
 instdir/program/sdlo.dll               | Bin 7556096 -> 7556096 bytes
 instdir/program/sduilo.dll             | Bin 1408000 -> 1408000 bytes
 instdir/program/setup.ini              |   2 +-
 instdir/program/sfxlo.dll              | Bin 5793280 -> 5793280 bytes
 instdir/program/simplecanvaslo.dll     | Bin 54272 -> 54272 bytes
 instdir/program/slideshowlo.dll        | Bin 1826304 -> 1826304 bytes
 instdir/program/svgfilterlo.dll        | Bin 954880 -> 954880 bytes
 instdir/program/svgiolo.dll            | Bin 415232 -> 415232 bytes
 instdir/program/svllo.dll              | Bin 1360896 -> 1360896 bytes
 instdir/program/svtlo.dll              | Bin 1997312 -> 1997312 bytes
 instdir/program/svxcorelo.dll          | Bin 8953344 -> 8953344 bytes
 instdir/program/svxlo.dll              | Bin 3746304 -> 3746304 bytes
 instdir/program/swlo.dll               | Bin 17808896 -> 17808896 bytes
 instdir/program/tllo.dll               | Bin 526336 -> 526336 bytes
 instdir/program/vclcanvaslo.dll        | Bin 446976 -> 446976 bytes
 instdir/program/vcllo.dll              | Bin 13464576 -> 13464576 bytes
 instdir/program/vclplug_winlo.dll      | Bin 2575360 -> 2575360 bytes
 instdir/program/version.ini            |   2 +-
 instdir/program/writerfilterlo.dll     | Bin 2838528 -> 2838528 bytes
 instdir/program/xolo.dll               | Bin 5279744 -> 5279744 bytes
 47 files changed, 2 insertions(+), 2 deletions(-)

- - -
Comment 6 Aron Budea 2024-03-20 16:10:18 UTC
Great! That is the following commit, let's add Noel to the loop.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=9f4ccc63346b26d8d774b22124da0842ef18e0bc
author		Noel Grandin <noel.grandin@collabora.co.uk>	2023-09-13 14:27:02 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2023-09-13 15:42:37 +0200

tdf#156995 speed up dragging complex group objects
Comment 7 Commit Notification 2024-03-26 18:03:01 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fc5d84681d5d898b56171a9622294ecb23623bfd

tdf#159805 Printing line style dotted lines (horizontal) turns into dashes.

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-03-27 08:23:26 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/e3d3581b327fd201d77f63a71fad52a52b53842f

tdf#159805 Printing line style dotted lines (horizontal) turns into dashes.

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.