tdf#159805 Printing line style dotted lines (horizontal) turns into dashes.

I could not find a good place to distinguish between the dragging
visualisation (where we could safely use approximation), and the
non-dragging case, so just revert.

Revert
    commit 9f4ccc63346b26d8d774b22124da0842ef18e0bc
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Wed Sep 13 14:27:02 2023 +0200
    tdf#156995 speed up dragging complex group objects

Change-Id: I2ba52f07ea7299643c0f145459038e368a17dea8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165332
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit fc5d84681d5d898b56171a9622294ecb23623bfd)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165320
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>